# totpc

./: .gitignore  .gitlab-ci.yml  Cargo.toml  README.md  _totpc.zsh  flake.nix  totpc.bash
.github/workflows/: test.yml
src/: base32.rs  compute.rs  file.rs  lib.rs  main.rs
tests/: integration_tests.rs
