[package]
authors = ["Jost Schulte"]
categories = ["command-line-utilities"]
description = "Desktop CLI tool to manage and compute TOTPs"
edition = "2021"
keywords = ["totp", "cli", "gpg", "store"]
license = "MIT"
name = "totpc"
repository = "https://gitlab.com/jost-s/totp-store"
version = "1.0.0"

[dependencies]
base32 = "0.4"
hmac = "0.12"
sha1 = "0.10"

[dev-dependencies]
assert_cmd = "2.0"
predicates = "2.1"
tempfile = "3.3"
